# TSEDA

TSEDA-EC_Cmp_S+eta/: ADBRKGA.cpp  ADBRKGA.h  CGA.cpp  CGA.h  CMakeLists.txt  HEFT.cpp  HEFT.h  HGA.cpp  HMEC.cpp  HMEC.h  HPSO.cpp  HPSO.h  LWSGA.cpp  LWSGA.h  NGA.cpp  NGA.h  TSEDA.cpp  TSEDA.h  fileList_1.0_(10).txt  main.cpp  run.sh
TSEDA-EC_Cmp_S+eta/data/: 25_1.0_0.txt  58_1.0_0.txt  97_1.0_0.txt  test.xml
TSEDA-EC_Cmp_S+eta/include/: GenOperator.h  GenerateAchrom.h  classAndVarDefine.h  config.h  tools.h
TSEDA-EC_Cmp_S+eta/lib/: GenOperator.cpp  GenerateAchrom.cpp  classAndVarDefine.cpp
TSEDA-EC_DT_S+eta/: ADBRKGA.cpp  CGA.cpp  CMakeLists.txt  HGA.cpp  HGA.h  HPSO.cpp  LWSGA.cpp  NGA.cpp  TSEDA.cpp  fileListTest  main.cpp
TSEDA-EC_DT_S+eta/data/: 24_1.0_0.txt
TSEDA-EC_DT_S+eta/include/: classAndVarDefine.h
TSEDA-EC_DT_S+eta/lib/: GenerateAchrom.cpp  classAndVarDefine.cpp  config.cpp  tools.cpp
TSEDA-EC_Orth_S+eta/: CMakeLists.txt  ExpParaSet.txt  TSEDA.cpp  TSEDA.h  fileList_1.0_(1).txt  main.cpp
TSEDA-EC_Orth_S+eta/data/: 100_1.0_0.txt  30_1.0_0.txt  47_1.0_0.txt  50_1.0_0.txt
TSEDA-EC_Orth_S+eta/include/: GenerateAchrom.h  classAndVarDefine.h  common.h  config.h  tools.h
TSEDA-EC_Orth_S+eta/lib/: GenerateAchrom.cpp  classAndVarDefine.cpp  config.cpp  tools.cpp
result/: Compare TSEDA-EC-S.xlsx  Determined runtime TSEDA-EC-S.xlsx  OrthRsltTSEDA-EC-S.xlsx
